kubernetes_manifests/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wisecow
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: xaaveshk/wisecow:latest
        ports:
        - containerPort: 4499
