kubernetes_manifests/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wisecow
  name: wisecow
  namespace: wisecow
spec:
  ports:
  - port: 4499
    protocol: TCP
    targetPort: 4499
  selector:
    app: wisecow
  type: LoadBalancer
