kubernetes_manifests/wisecow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wisecow
  name: wisecow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.cloudclown.shop
    secretName: wisecow-tls
  rules:
  - host: app.cloudclown.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow
            port:
              number: 4499
